# toy-lisp-interpreter

./: .gitignore  README.md  environment.py  eval.py  lexer.py  lisp-interpreter.py  parser tokens  parser.py  pyproject.toml  raport.md  resources  scheme copy.ebnf  scheme.ebnf
tests/: command.sh  fizzbuzz-lambda.scm  fizzbuzz.scm  hello-world.scm  simplelist.scm
tests/dropped/: fizzbuzz-recursive.scm
