[tool.poetry]
name = "lisp-interpreter"
version = "0.1.0"
description = ""
authors = ["Michał Flak <mflak@monadical.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sly = "^0.4"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
